<resources>
    <string name="app_name">Soundscape</string>

    <!-- Login Activity -->
    <string name="txt_login_email">Email</string>
    <string name="txt_login_password">Contraseña</string>
    <string name="txt_login_btn_login">Iniciar Sesión</string>
    <string name="txt_login_btn_register">Registrarse</string>
    <string name="txt_login_endtitle">Soundscape</string>

    <!-- Register Activity -->
    <string name="txt_register_name">Nombre</string>
    <string name="txt_register_email">Email</string>
    <string name="txt_register_password">Contraseña</string>
    <string name="txt_register_confirm_password">Confirmar Contraseña</string>
    <string name="txt_register_btn_register">Registrarse</string>
    <string name="txt_register_btn_cancel">Cancelar</string>
    <string name="txt_register_endtitle">Soundscape</string>

    <!-- Home Header Layout -->
    <string name="txt_home_header_app_logo">Soundscape</string>
    <string name="txt_home_header_title">Soundscape</string>

    <!-- Home Activity -->
    <string name="txt_home_button_news">Ir a Noticias</string>
    <string name="txt_home_button_chart">Ir al Chart</string>
    <string name="txt_home_button_blogs">Ir a Blogs</string>
    <string name="txt_home_button_settings">Ir a Ajustes</string>

    <!-- News Header Layout -->
    <string name="txt_news_header_app_logo">Soundscape</string>
    <string name="txt_news_header_title">Noticias</string>

    <!-- Chart Header Layout -->
    <string name="txt_chart_header_app_logo">Soundscape</string>
    <string name="txt_chart_header_title">Chart</string>

    <!-- Blogs Header Layout -->
    <string name="txt_blogs_header_app_logo">Soundscape</string>
    <string name="txt_blogs_header_title">Blogs</string>
    
    <!-- Settings Header Layout -->
    <string name="txt_settings_header_app_logo">Soundscape</string>
    <string name="txt_settings_header_title">Ajustes</string>

    <!-- Settings Activity -->
    <string name="txt_settings_button_logout">Cerrar Sesión</string>

</resources>